--- a/WebServiceGrupo2/src/main/webapp/index.html
+++ b/WebServiceGrupo2/src/main/webapp/index.html
@@ -16,7 +16,7 @@ and open the template in the editor.
         <script>
             
         function validalogin(){
-             var JSONObject= {"LoginUsuario":uname, "senhaUsuario":password };
+             var JSONObject= {"Admin":LoginUsuario, "pipoca":senhaUsuario };
              var jsonData = JSON.parse( JSONObject ); 
                     
                 $.ajax({
