Revert "Atualização WebService 2"
This reverts commit fa35dacadf544f68fbdfb7e58bda1cfa338ddca4.

--- a/WebServiceGrupo2/src/main/webapp/index.html
+++ b/WebServiceGrupo2/src/main/webapp/index.html
@@ -16,7 +16,7 @@ and open the template in the editor.
         <script>
             
         function validalogin(){
-             var JSONObject= {"Admin":LoginUsuario, "pipoca":senhaUsuario };
+             var JSONObject= {"LoginUsuario":uname, "senhaUsuario":password };
              var jsonData = JSON.parse( JSONObject ); 
                     
                 $.ajax({
