--- a/WebServiceGrupo1/src/main/webapp/index.html
+++ b/WebServiceGrupo1/src/main/webapp/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>PI - III</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
-    <body>
-        <h1>Hello World!</h1>
+    <body style=" text-align: center;">
+        <h3>WebService Listando</h3>
+        <p>Detalhes de cada Produto pelo ID</p>
+        <p>Imagens de cada produto</p>
+        <p>Categorias</p>
+        <p>Prodtutos</p>
     </body>
 </html>
